[package]
name = "bruteforus"
version = "0.1.0"
authors = ["parampreetR <raja.rai6789@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
multiqueue = "0.3.2"
reqwest = "0.10.4"
tokio = { version = "0.2.21", features = ["macros"] }
indicatif = "0.15.0"

[dependencies.clap]
version = "2.33.3"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]

[build-dependencies]
clap = "2.33.3"